New model management

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -105,9 +105,13 @@
   "carmodelupload.no-cars": "No cars",
   "carmodelupload.no-cars-online": "No cars are currently online.",
   "carmodelupload.please-wait": "Please wait whilst model upload jobs are submitted",
+  "carmodelupload.dismiss-aria-label": "Close alert",
+  "carmodelupload.close-modal-ari-label": "Close Modal",
   "carmodelupload.status": "Status",
   "carmodelupload.upload": "Upload models to car",
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
+  "carmodelupload.status.InProgress": "In Progress",
+  "carmodelupload.status.Success": "Successful",
   "cars.agent-version": "Agent version",
   "cars.breadcrumb": "Cars",
   "cars.car-information": "Car information",
@@ -305,6 +309,7 @@
   "notifications.item-type-event": "Event",
   "notifications.item-type-user": "User",
   "notifications.item-type-race": "Race",
+  "notifications.item-type-model": "Model",
   "notifications.creating-item": "Creating {{itemType}} {{itemName}}...",
   "notifications.create-item-success": "{{itemType}} {{itemName}} created",
   "notifications.create-item-error": "{{itemType} {{itemName}} could not be created, {{errorMessage}}",
@@ -345,17 +350,29 @@
   "models.delete-models": "Delete models",
   "models.delete-model": "Delete model",
   "models.upload-date": "Upload date",
+  "models.status": "Status",
   "models.user-name": "Username",
   "models.model-id": "ID",
   "models.md5-hash": "Model MD5",
   "models.md5-hash-metadata": "Metadata MD5",
   "models.model-s3-key": "S3 Key",
+  "models.training-algorithm": "Training algorithm",
+  "models.action-space-type": "Action space type",
+  "models.sensor": "Sensors",
+  "models.split-panel.multi-choice-text": "Select 1 model to see the model details",
+  "models.split-panel.empty": "Select a model to see its details",
+  "models.split-panel-header": "{{numberOfModels}} models selected",
   "models.delete-modal.header": "Delete models?",
   "models.delete-modal.description": "Are you sure you want to delete the following models?",
   "models.notifications.could-not-upload": "Could not upload model,",
   "models.notifications.uploading-model": "Uploading model",
   "models.notifications.upload-successful-1": "Model",
   "models.notifications.upload-successful-2": "uploaded",
+  "models.notifications.dismiss-message": "Dismiss message",
+  "model.upload.status.uploaded": "Virus scan ongoing",
+  "model.upload.status.available": "Available",
+  "model.upload.status.quarantined": "Virus detected",
+  "model.upload.status.not-valid": "Not a valid model file",
   "quarantine.breadcrumb": "Quarantined models",
   "quarantine.header": "Quarantined models",
   "quarantine.list-of-all-models": "Quarantined models are defective or may contain malicious content.",
