--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -211,8 +211,8 @@
   "events.selector.option-description": "Event date: {{eventDate}}, Lead: {{eventLead}}",
   "events.selector.track-type": "Track type: {{trackType}}",
   "race-admin.header": "Race management",
+  "race-admin.description": "Race operators can manage races by editing and deleting race runs.",
   "race-admin.loading-resources": "Loading races",
-  "race-admin.description": "",
   "race-admin.breadcrumb": "Race management",
   "race-admin.races-table-header": "Races",
   "race-admin.created-at": "Created",
@@ -307,6 +307,7 @@
   "users.country-code": "Country Code",
   "users.flag": "Flag",
   "users-list.header": "Users",
+  "users-list.description": "Users are assigned roles that determine which actions they can perform in DREM.",
   "notifications.item-type-event": "Event",
   "notifications.item-type-user": "User",
   "notifications.item-type-race": "Race",
@@ -343,6 +344,8 @@
   "models.breadcrumb": "Model management",
   "models.all-breadcrumb": "All models",
   "models.header": "Model management",
+  "models.description": "Upload and manage your models.",
+  "models.operator.description": "Race operators can view, sort, and upload models to AWS DeepRacer cars.",
   "models.table-header": "Models",
   "models.list-of-all-uploaded-models": "Models listed are available for upload to cars. You can select a single model or multiple models.",
   "models.loading-models": "Loading models",
@@ -402,10 +405,10 @@
   "timekeeper.dnf": "Did not finish",
   "timekeeper.end-race": "End race",
   "timekeeper.race-setup-page.page-header": "Timekeeper: Select racer",
-  "timekeeper.race-setup-page.page-description": "",
+  "timekeeper.race-setup-page.page-description": "Choose a racer to time on the track.",
   "timekeeper.race-setup-page.racing-on-trackId": "on",
   "timekeeper.race-page.page-header": "Timekeeper",
-  "timekeeper.race-page.page-description": "COPY HERE",
+  "timekeeper.race-page.page-description": "The Timekeeper starts and ends races, captures individual laps, and records car resets.",
   "timekeeper.race-page.warning-modal.text": "Are you sure you want to end the race?",
   "timekeeper.race-page.warning-modal.header": "Warning!",
   "timekeeper.race-page.race-format-header": "Race format",
@@ -422,8 +425,8 @@
   "timekeeper.end-session.raced-by-proxy": "Raced by proxy",
   "timekeeper.end-session.laps-panel-header": "Laps",
   "timekeeper.end-session.warning-message": "Discarding the race will delete the race without saving it!",
-  "timekeeper.end-session.page-header": "Timekeeper",
-  "timekeeper.end-session.page-description": "Verify that all laps and racer details are accurate before submitting the race.",
+  "timekeeper.end-session.page-header": "Timekeeper: Submit race",
+  "timekeeper.end-session.page-description": "Check lap information and racer details before submitting a race to the leaderboard.",
   "timekeeper.fastest-lap": "Fastest lap",
   "timekeeper.lap-table.valid-header": "Valid",
   "timekeeper.lap-table.valid": "Yes",
@@ -439,9 +442,9 @@
   "timekeeper.racer-selector.select-racer": "Racer name",
   "timekeeper.racer-selector.selected": "Selected",
   "timekeeper.race-setup-page.racer-description": "Select which racer to time",
-  "timekeeper.racer-selector.races-by-user": "# of completed races",
-  "timekeeper.racer-selector.number-of-current-races": "Current:",
-  "timekeeper.racer-selector.max-number-of-allowed-races": "Max:",
+  "timekeeper.racer-selector.races-by-user": "Event races",
+  "timekeeper.racer-selector.number-of-current-races": "Completed races:",
+  "timekeeper.racer-selector.max-number-of-allowed-races": "Max races:",
   "timekeeper.recorded-laps": "Recorded laps",
   "timekeeper.resets": "Resets",
   "timekeeper.start-race": "Start race",
