--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -16,7 +16,7 @@
   "admin.breadcrumb": "Admin",
   "admin.home-header": "DeepRacer Event Manager administration",
   "operator.breadcrumb": "Operator",
-  "car-management.breadcrumb": "Car management",
+  "device-management.breadcrumb": "Device management",
   "event-management.breadcrumb": "Event management",
   "button.cancel": "Cancel",
   "button.clear-selected": "Clear selected",
@@ -30,6 +30,11 @@
   "button.create": "Create",
   "button.next": "Next",
   "button.ok": "Ok",
+  "common.copied-to-clipboard": "copied to clipboard",
+  "common.in-progress": "In progress",
+  "common.error": "Error",
+  "common.success": "Success",
+  "common.info": "Info",
   "common.yes": "Yes",
   "common.no": "No",
   "common.no-matches": "No matches",
@@ -70,7 +75,6 @@
   "filtering.token-limit-show-fewer": "Show fewer",
   "filtering.clear-filters-text": "Clear filters",
   "AdminActivation.car-activation.breadcrumb": "Car activation",
-  "AdminActivation.car-activation.copied-to-clipboard": "copied to clipboard",
   "AdminActivation.car-activation.description": "Register and update cars.",
   "AdminActivation.car-activation.fleet": "Fleet",
   "AdminActivation.car-activation.generate": "Generate",
@@ -89,6 +93,18 @@
   "AdminActivation.car-activation.wifi-placeholder": "wifimagic",
   "AdminActivation.car-activation.wifi": "WiFi Password",
   "AdminActivation.car-activation.version-warning": "DREM is designed for use with AWS DeepRacer cars running firmware version 20.04 and above. Earlier firmware versions are not supported.",
+  "timer-activation.header": "Timer activation",
+  "timer-activation.description": "Register and install timer code on RPi devices",
+  "timer-activation.fleet": "Fleet",
+  "timer-activation.generate": "Generate",
+  "timer-activation.breadcrumb": "Timer activation",
+  "timer-activation.script-lower": "script",
+  "timer-activation.hostname-placeholder": "drtimer01",
+  "timer-activation.hostname": "Hostname",
+  "timer-activation.password-placeholder": "password",
+  "timer-activation.password": "Password",
+  "timer-activation.script": "Script",
+  "timer-activation.ssm-only": "SSM Only",
   "label-printer.download-printable-label": "Download printable label",
   "label-printer.download-printable-labels": "Download printable labels",
   "carmodelupload.clear-filter": "Clear filter",
@@ -113,21 +129,24 @@
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "carmodelupload.status.InProgress": "In Progress",
   "carmodelupload.status.Success": "Successful",
-  "cars.agent-version": "Agent version",
-  "cars.breadcrumb": "Cars",
-  "cars.car-information": "Car information",
-  "cars.car-ip": "Car IP",
-  "cars.description": "List of cars registered in DREM",
-  "cars.fleet-id": "Fleet ID",
-  "cars.fleet-name": "Fleet name",
-  "cars.header": "Cars",
-  "cars.host-name": "Host name",
-  "cars.instance": "Instance",
-  "cars.last-ping-time": "Last ping time",
-  "cars.loading": "Loading cars",
-  "cars.offline": "Offline",
-  "cars.online": "Online",
-  "cars.registration-date": "Registration date",
+  "devices.agent-version": "Agent version",
+  "devices.breadcrumb": "Devices",
+  "devices.type": "Device type",
+  "devices.car-information": "Device information",
+  "devices.car-ip": "Device IP",
+  "devices.description": "List of devices registered in DREM",
+  "devices.fleet-id": "Fleet ID",
+  "devices.fleet-name": "Fleet name",
+  "devices.header": "Devices",
+  "devices.host-name": "Host name",
+  "devices.instance": "Instance",
+  "devices.last-ping-time": "Last ping time",
+  "devices.loading": "Loading devices",
+  "devices.offline": "Offline",
+  "devices.online": "Online",
+  "devices.registration-date": "Registration date",
+  "devices.filter-deepracer": "DeepRacer car",
+  "devices.filter-timer": "Timer",
   "events.events-information": "Event information",
   "event-provider.please-select-an-event": "Select an event",
   "events.create-event": "Create event",
@@ -260,7 +279,7 @@
   "fleets.edit-cars.delete-models": "Delete models",
   "fleets.edit-cars.delete-models-header": "Delete models on cars",
   "fleets.edit-cars.delete-models-message": "Are you sure you want to delete models on cars(s)",
-  "fleets.edit-cars.edit-cars": "Edit cars",
+  "fleets.edit-cars.edit-cars": "Edit devices",
   "fleets.edit-cars.select-color": "Select colour",
   "fleets.edit-cars.select-fleet": "Fleet",
   "fleets.edit-cars.update-fleets": "Update fleets",
@@ -328,11 +347,11 @@
   "homeCards.adminHomeCards.all-models": "All models",
   "homeCards.adminHomeCards.car-activation-description": "Add cars to DREM.",
   "homeCards.adminHomeCards.car-activation": "Car activation",
-  "homeCards.adminHomeCards.cars-description": "List of all cars registered (online and offline).",
-  "homeCards.adminHomeCards.cars": "Cars",
+  "homeCards.adminHomeCards.devices-description": "List of all devices registered (online and offline).",
+  "homeCards.adminHomeCards.devices": "Devices",
   "homeCards.adminHomeCards.events-description": "Create and administer events.",
   "homeCards.adminHomeCards.events": "Events",
-  "homeCards.adminHomeCards.fleets-description": "Create and administer your fleet of cars.",
+  "homeCards.adminHomeCards.fleets-description": "Create and administer your fleet of devices.",
   "homeCards.adminHomeCards.fleets": "Fleets",
   "homeCards.adminHomeCards.quarantined-description": "Any models that have been flagged as suspicious during upload.",
   "homeCards.adminHomeCards.quarantined": "Quarantined models",
@@ -458,8 +477,9 @@
   "topnav.all": "All",
   "topnav.back": "Back",
   "topnav.car-activation": "Car activation",
-  "topnav.car-management": "Car management",
-  "topnav.cars": "Cars",
+  "topnav.timer-activation": "Timer activation",
+  "topnav.device-management": "Device management",
+  "topnav.cars": "Devices",
   "topnav.close-menu": "Close menu",
   "topnav.close-search": "Close search",
   "topnav.event": "Event management",
