--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -129,6 +129,21 @@
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "carmodelupload.status.InProgress": "In Progress",
   "carmodelupload.status.Success": "Successful",
+  "cars.agent-version": "Agent version",
+  "cars.breadcrumb": "Cars",
+  "cars.car-information": "Car information",
+  "cars.car-ip": "Car IP",
+  "cars.description": "List of cars registered in DREM",
+  "cars.fleet-id": "Fleet ID",
+  "cars.fleet-name": "Fleet name",
+  "cars.header": "Cars",
+  "cars.host-name": "Host name",
+  "cars.instance": "Instance",
+  "cars.last-ping-time": "Last ping time",
+  "cars.loading": "Loading cars",
+  "cars.offline": "Offline",
+  "cars.online": "Online",
+  "cars.registration-date": "Registration date",
   "devices.agent-version": "Agent version",
   "devices.breadcrumb": "Devices",
   "devices.type": "Device type",
