Removed redundant strings

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -109,7 +109,7 @@
   "label-printer.download-printable-labels": "Download printable labels",
   "carmodelupload.clear-filter": "Clear filter",
   "carmodelupload.clear": "Clear car models first?",
-  "carmodelupload.commandid": "CommandId",
+  "carmodelupload.commandid": "Command Id",
   "carmodelupload.filter-cars": "Filter cars",
   "carmodelupload.header-delete-confirm": "Are you sure you want to delete models on Cars(s)",
   "carmodelupload.header-delete-upload": "Delete and upload",
@@ -118,7 +118,7 @@
   "carmodelupload.header": "Select a car",
   "carmodelupload.loading-cars": "Loading cars",
   "carmodelupload.loading": "Loading resources",
-  "carmodelupload.modelname": "ModelName",
+  "carmodelupload.modelname": "Model name",
   "carmodelupload.no-cars": "No cars",
   "carmodelupload.no-cars-online": "No cars are currently online.",
   "carmodelupload.please-wait": "Please wait whilst model upload jobs are submitted",
@@ -129,21 +129,7 @@
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "carmodelupload.status.InProgress": "In Progress",
   "carmodelupload.status.Success": "Successful",
-  "cars.agent-version": "Agent version",
-  "cars.breadcrumb": "Cars",
   "cars.car-information": "Car information",
-  "cars.car-ip": "Car IP",
-  "cars.description": "List of cars registered in DREM",
-  "cars.fleet-id": "Fleet ID",
-  "cars.fleet-name": "Fleet name",
-  "cars.header": "Cars",
-  "cars.host-name": "Host name",
-  "cars.instance": "Instance",
-  "cars.last-ping-time": "Last ping time",
-  "cars.loading": "Loading cars",
-  "cars.offline": "Offline",
-  "cars.online": "Online",
-  "cars.registration-date": "Registration date",
   "devices.agent-version": "Agent version",
   "devices.breadcrumb": "Devices",
   "devices.type": "Device type",
