Modern DREM to Car Uploader

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -125,10 +125,37 @@
   "carmodelupload.dismiss-aria-label": "Close alert",
   "carmodelupload.close-modal-ari-label": "Close Modal",
   "carmodelupload.status": "Status",
+  "carmodelupload.status.created": "Created",
+  "carmodelupload.status.started": "Started",
+  "carmodelupload.status.inprogress": "In Progress",
+  "carmodelupload.status.success": "Success",
+  "carmodelupload.status.error": "Error",
   "carmodelupload.upload": "Upload models to car",
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "carmodelupload.status.InProgress": "In Progress",
   "carmodelupload.status.Success": "Successful",
+  "carmodelupload.modern": "Modern",
+  "carmodelupload.legacy": "Legacy",
+  "carmodelupload.carName": "Car Name",
+  "carmodelupload.carIpAddress": "Car IP Address",
+  "carmodelupload.startTime": "Start time",
+  "carmodelupload.uploadStartTime": "Upload start time",
+  "carmodelupload.endTime": "End time",
+  "cars.agent-version": "Agent version",
+  "cars.breadcrumb": "Cars",
+  "cars.car-information": "Car information",
+  "cars.car-ip": "Car IP",
+  "cars.description": "List of cars registered in DREM",
+  "cars.fleet-id": "Fleet ID",
+  "cars.fleet-name": "Fleet name",
+  "cars.header": "Cars",
+  "cars.host-name": "Host name",
+  "cars.instance": "Instance",
+  "cars.last-ping-time": "Last ping time",
+  "cars.loading": "Loading cars",
+  "cars.offline": "Offline",
+  "cars.online": "Online",
+  "cars.registration-date": "Registration date",
   "devices.device-information": "Device information",
   "devices.agent-version": "Agent version",
   "devices.breadcrumb": "Devices",
