--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -125,10 +125,37 @@
   "carmodelupload.dismiss-aria-label": "Close alert",
   "carmodelupload.close-modal-ari-label": "Close Modal",
   "carmodelupload.status": "Status",
+  "carmodelupload.status.created": "Created",
+  "carmodelupload.status.started": "Started",
+  "carmodelupload.status.inprogress": "In Progress",
+  "carmodelupload.status.success": "Success",
+  "carmodelupload.status.error": "Error",
   "carmodelupload.upload": "Upload models to car",
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
   "carmodelupload.status.InProgress": "In Progress",
   "carmodelupload.status.Success": "Successful",
+  "carmodelupload.modern": "Modern",
+  "carmodelupload.legacy": "Legacy",
+  "carmodelupload.carName": "Car Name",
+  "carmodelupload.carIpAddress": "Car IP Address",
+  "carmodelupload.startTime": "Start time",
+  "carmodelupload.uploadStartTime": "Upload start time",
+  "carmodelupload.endTime": "End time",
+  "cars.agent-version": "Agent version",
+  "cars.breadcrumb": "Cars",
+  "cars.car-information": "Car information",
+  "cars.car-ip": "Car IP",
+  "cars.description": "List of cars registered in DREM",
+  "cars.fleet-id": "Fleet ID",
+  "cars.fleet-name": "Fleet name",
+  "cars.header": "Cars",
+  "cars.host-name": "Host name",
+  "cars.instance": "Instance",
+  "cars.last-ping-time": "Last ping time",
+  "cars.loading": "Loading cars",
+  "cars.offline": "Offline",
+  "cars.online": "Online",
+  "cars.registration-date": "Registration date",
   "devices.device-information": "Device information",
   "devices.agent-version": "Agent version",
   "devices.breadcrumb": "Devices",
@@ -209,9 +236,12 @@
   "events.race.unlimited": "Unlimited",
   "events.race.ranking.best-lap-time": "Best lap time",
   "events.race.ranking.finish-x-laps": "Finish x laps",
+  "events.race.ranking.best-average-lap-time-x-lap": "Average over X laps window",
   "events.race.race-customisations": "Race customisations",
   "events.race.allowed-races-per-racer-label": "Allowed races per racer",
   "events.race.allowed-races-per-racer-description": "The maximum number of races a racer is allowed to do during an event",
+  "events.race.average-time-window-label": "Average Time Window",
+  "events.race.average-time-window-description": "Number of consecutive laps for average laptime",
   "events.sponsor.label": "Sponsor",
   "events.fleet-info.label": "Car Fleet",
   "events.fleet-info.description": "Select the fleet of cars to use for the event.",
@@ -247,6 +277,7 @@
   "race-admin.no-races": "No races found",
   "race-admin.lap-id": "Lap Id",
   "race-admin.time": "Time",
+  "race-admin.avg-time": "Avg. Time",
   "race-admin.resets": "Resets",
   "race-admin.is-valid": "Valid",
   "race-admin.aut-timer-connected": "Automatic timer",
@@ -455,6 +486,12 @@
   "timekeeper.lap-table.lap-time": "Time",
   "timekeeper.lap-table.loading-resources": "Loading resources",
   "timekeeper.lap-table.resets": "Resets",
+  "timekeeper.lap-table.average": "Average",
+  "timekeeper.avg-lap-table.header": "Fastest Average Lap",
+  "timekeeper.avg-lap-table.loading-resources": "Loading resources",
+  "timekeeper.avg-lap-table.from-lap": "From Lap",
+  "timekeeper.avg-lap-table.to-lap": "To Lap",
+  "timekeeper.avg-lap-table.average": "Average",
   "timekeeper.pause-race": "Pause race",
   "timekeeper.racer-selector.loading-events": "Loading events",
   "timekeeper.racer-selector.loading-racers": "Loading racers",
