updated the track types

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -247,7 +247,9 @@
   "events.fleet-info.description": "Select the fleet of cars to use for the event.",
   "events.tracks.reinvent-2018": "re:Invent 2018",
   "events.tracks.reinvent-2019": "re:Invent 2019",
-  "events.tracks.reinvent-2022": "2022 Summit speedway",
+  "events.tracks.reinvent-2022": "re:Invent 2022",
+  "events.tracks.reinvent-2023": "re:Invent 2023",
+  "events.tracks.summit-2022": "2022 Summit speedway",
   "events.tracks.atoz-speedway": "A to Z Speedway",
   "events.tracks.other": "Other",
   "events.tracks.choose": "Choose track",
