User list can be filtered by the defined roles (no longer accepting free text)

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -334,6 +334,13 @@
   "users.breadcrumb": "Add racer",
   "users-admin.breadcrumb": "Users",
   "users-admin.change-role-button": "Change role",
+  "users-admin.change-role-modal-title": "Change Role",
+  "users-admin.change-role-modal-sub": "Choose a role",
+  "users.role.administrator": "admin",
+  "users.role.operator": "operator",
+  "users.role.commentator": "commentator",
+  "users.role.registration": "registration",
+  "users.role.racer": "racer",
   "users.description": "Register walk-up racers who don't have an existing account.",
   "users.header": "Add racer",
   "users.information": "Users information",
