--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -572,6 +572,27 @@
   "commentator.race.averagelapCount": "Average laps per run",
   "commentator.race.restSum": "# of Resets",
   "commentator.race.averageResetsPerLap": "Average resets per lap",
+  "commentator.race.fastest": "Fastest Lap (Run)",
+  "commentator.race.fastestLapId": "Lap",
+  "commentator.race.fastestAvg": "Fastest Avg. (Run)",
+  "commentator.race.fastestAvgWindow": "Laps",
+  "commentator.race.rank": "Rank",
+  "commentator.race.gapToFastest": "Gap to 1st",
+  "commentator.race.actualPosition": "Actual Position",
+  "commentator.race.newPosition": "New Position",
+  "commentator.race.graph.fastestAvgLap": "Fastest Average Lap Time",
+  "commentator.race.graph.fastestLap": "Fastest Lap Time",
+  "commentator.race.graph.invalidLaps": "Invalid Laps",
+  "commentator.race.graph.validLaps": "Valid Laps",
+  "commentator.race.graph.fastestRaceLap": "Fastest Lap",
+  "commentator.race.graph.fastestAvgWindow": "Fastest Average Window",
+  "commentator.race.status": "Status",
+  "commentator.race.status.NO_RACER_SELECTED": "Not Running",
+  "commentator.race.status.READY_TO_START": "Ready to start",
+  "commentator.race.status.RACE_IN_PROGRESS": "Race Running",
+  "commentator.race.status.RACE_PAUSED": "Race Paused",
+  "commentator.race.status.RACE_FINSIHED": "Race Finished",
+  "commentator.race.status.RACE_SUBMITTED": "Race Finished",
   "user-profile.header.details": "Account details",
   "user-profile.description": "Update your user settings and password.",
   "user-profile.settings.name": "Name",
