Added Upload Status Page

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -141,6 +141,8 @@
   "carmodelupload.startTime": "Start time",
   "carmodelupload.uploadStartTime": "Upload start time",
   "carmodelupload.endTime": "End time",
+  "carmodelupload.jobId": "Job ID",
+  "carmodelupload.duration": "Duration",
   "cars.agent-version": "Agent version",
   "cars.breadcrumb": "Cars",
   "cars.car-information": "Car information",
@@ -547,6 +549,8 @@
   "topnav.registration": "Registration",
   "topnav.users": "Users",
   "topnav.operator": "Operator",
+  "topnav.beta": "Beta",
+  "topnav.upload-to-car-status": "Upload status",
   "upload.chose-file": "Upload model",
   "upload.header": "Upload models",
   "commentator.race.header": "Race statistics",
@@ -613,5 +617,15 @@
   "user-profile.settings.form.label.new_pw_conf.ph": "Confirm your new password",
   "user-profile.settings.form.pw_changed": "Password successfully changed",
   "user-profile.settings.form.error": "Error changing password, please check your old password and try again",
-  "user-profile.settings.form.pw.error": "New passwords do not match."
+  "user-profile.settings.form.pw.error": "New passwords do not match.",
+  "upload-to-car-status.header": "Uploads to car status",
+  "upload-to-car-status.loading": "Loading",
+  "upload-to-car-status.description": "Uploads",
+  "upload-to-car-status.breadcrumb": "Uploads to car status",
+  "upload-to-car-status.pie.header": "Status",
+  "upload-to-car-status.horizontal-bar.header": "Summary",
+  "upload-to-car-status.horizontal-bar.x-title": "Type",
+  "upload-to-car-status.upload-time.header": "Upload Times",
+  "upload-to-car-status.upload-time.x-title": "Time (UTC)",
+  "upload-to-car-status.upload-time.y-title": "Seconds"
 }
