--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -141,6 +141,8 @@
   "carmodelupload.startTime": "Start time",
   "carmodelupload.uploadStartTime": "Upload start time",
   "carmodelupload.endTime": "End time",
+  "carmodelupload.jobId": "Job ID",
+  "carmodelupload.duration": "Duration",
   "cars.agent-version": "Agent version",
   "cars.breadcrumb": "Cars",
   "cars.car-information": "Car information",
@@ -334,6 +336,13 @@
   "users.breadcrumb": "Add racer",
   "users-admin.breadcrumb": "Users",
   "users-admin.change-role-button": "Change role",
+  "users-admin.change-role-modal-title": "Change Role",
+  "users-admin.change-role-modal-sub": "Choose a role",
+  "users.role.administrator": "admin",
+  "users.role.operator": "operator",
+  "users.role.commentator": "commentator",
+  "users.role.registration": "registration",
+  "users.role.racer": "racer",
   "users.description": "Register walk-up racers who don't have an existing account.",
   "users.header": "Add racer",
   "users.information": "Users information",
@@ -540,6 +549,8 @@
   "topnav.registration": "Registration",
   "topnav.users": "Users",
   "topnav.operator": "Operator",
+  "topnav.beta": "Beta",
+  "topnav.upload-to-car-status": "Upload status",
   "upload.chose-file": "Upload model",
   "upload.header": "Upload models",
   "commentator.race.header": "Race statistics",
@@ -565,6 +576,27 @@
   "commentator.race.averagelapCount": "Average laps per run",
   "commentator.race.restSum": "# of Resets",
   "commentator.race.averageResetsPerLap": "Average resets per lap",
+  "commentator.race.fastest": "Fastest Lap (Run)",
+  "commentator.race.fastestLapId": "Lap",
+  "commentator.race.fastestAvg": "Fastest Avg. (Run)",
+  "commentator.race.fastestAvgWindow": "Laps",
+  "commentator.race.rank": "Rank",
+  "commentator.race.gapToFastest": "Gap to 1st",
+  "commentator.race.actualPosition": "Actual Position",
+  "commentator.race.newPosition": "New Position",
+  "commentator.race.graph.fastestAvgLap": "Fastest Average Lap Time",
+  "commentator.race.graph.fastestLap": "Fastest Lap Time",
+  "commentator.race.graph.invalidLaps": "Invalid Laps",
+  "commentator.race.graph.validLaps": "Valid Laps",
+  "commentator.race.graph.fastestRaceLap": "Fastest Lap",
+  "commentator.race.graph.fastestAvgWindow": "Fastest Average Window",
+  "commentator.race.status": "Status",
+  "commentator.race.status.NO_RACER_SELECTED": "Not Running",
+  "commentator.race.status.READY_TO_START": "Ready to start",
+  "commentator.race.status.RACE_IN_PROGRESS": "Race Running",
+  "commentator.race.status.RACE_PAUSED": "Race Paused",
+  "commentator.race.status.RACE_FINSIHED": "Race Finished",
+  "commentator.race.status.RACE_SUBMITTED": "Race Finished",
   "user-profile.header.details": "Account details",
   "user-profile.description": "Update your user settings and password.",
   "user-profile.settings.name": "Name",
@@ -585,5 +617,15 @@
   "user-profile.settings.form.label.new_pw_conf.ph": "Confirm your new password",
   "user-profile.settings.form.pw_changed": "Password successfully changed",
   "user-profile.settings.form.error": "Error changing password, please check your old password and try again",
-  "user-profile.settings.form.pw.error": "New passwords do not match."
+  "user-profile.settings.form.pw.error": "New passwords do not match.",
+  "upload-to-car-status.header": "Uploads to car status",
+  "upload-to-car-status.loading": "Loading",
+  "upload-to-car-status.description": "Uploads",
+  "upload-to-car-status.breadcrumb": "Uploads to car status",
+  "upload-to-car-status.pie.header": "Status",
+  "upload-to-car-status.horizontal-bar.header": "Summary",
+  "upload-to-car-status.horizontal-bar.x-title": "Type",
+  "upload-to-car-status.upload-time.header": "Upload Times",
+  "upload-to-car-status.upload-time.x-title": "Time (UTC)",
+  "upload-to-car-status.upload-time.y-title": "Seconds"
 }
