Moved upload status to Operator view plus some other fixes

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -404,6 +404,7 @@
   "homeCards.adminHomeCards.registration-description": "Racers register themselves or are registered by administrators to DREM.",
   "models.all-header": "Models",
   "models.breadcrumb": "Model management",
+  "models.models.breadcrumb": "Models",
   "models.all-breadcrumb": "All models",
   "models.header": "Model management",
   "models.description": "Upload and manage your models.",
@@ -536,7 +537,8 @@
   "topnav.fleets": "Fleets",
   "topnav.create-user": "Add racer",
   "topnav.race-admin": "Manage race",
-  "topnav.models": "Model management",
+  "topnav.models-management": "Model management",
+  "topnav.models": "Models",
   "topnav.models-own": "Model management",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
@@ -586,9 +588,9 @@
   "commentator.race.newPosition": "New Position",
   "commentator.race.graph.fastestAvgLap": "Fastest Average Lap Time",
   "commentator.race.graph.fastestLap": "Fastest Lap Time",
-  "commentator.race.graph.invalidLaps": "Invalid Laps",
-  "commentator.race.graph.validLaps": "Valid Laps",
-  "commentator.race.graph.fastestRaceLap": "Fastest Lap",
+  "commentator.race.graph.invalidLaps": "Not Valid",
+  "commentator.race.graph.validLaps": "Valid",
+  "commentator.race.graph.fastestRaceLap": "Fastest",
   "commentator.race.graph.fastestAvgWindow": "Fastest Average Window",
   "commentator.race.status": "Status",
   "commentator.race.status.NO_RACER_SELECTED": "Not Running",
@@ -621,8 +623,8 @@
   "user-profile.settings.form.pw.error": "New passwords do not match.",
   "upload-to-car-status.header": "Uploads to car status",
   "upload-to-car-status.loading": "Loading",
-  "upload-to-car-status.description": "Uploads",
-  "upload-to-car-status.breadcrumb": "Uploads to car status",
+  "upload-to-car-status.description": "",
+  "upload-to-car-status.breadcrumb": "Upload status",
   "upload-to-car-status.pie.header": "Status",
   "upload-to-car-status.horizontal-bar.header": "Summary",
   "upload-to-car-status.horizontal-bar.x-title": "Type",
