--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -496,10 +496,10 @@
   "timekeeper.lap-table.loading-resources": "Loading resources",
   "timekeeper.lap-table.resets": "Resets",
   "timekeeper.lap-table.average": "Average",
-  "timekeeper.avg-lap-table.header": "Fastest Average Lap",
+  "timekeeper.avg-lap-table.header": "Fastest average lap",
   "timekeeper.avg-lap-table.loading-resources": "Loading resources",
-  "timekeeper.avg-lap-table.from-lap": "From Lap",
-  "timekeeper.avg-lap-table.to-lap": "To Lap",
+  "timekeeper.avg-lap-table.from-lap": "From lap",
+  "timekeeper.avg-lap-table.to-lap": "To lap",
   "timekeeper.avg-lap-table.average": "Average",
   "timekeeper.pause-race": "Pause race",
   "timekeeper.racer-selector.loading-events": "Loading events",
@@ -572,6 +572,28 @@
   "commentator.race.averagelapCount": "Average laps per run",
   "commentator.race.restSum": "# of Resets",
   "commentator.race.averageResetsPerLap": "Average resets per lap",
+  "commentator.race.fastest": "Fastest lap (Run)",
+  "commentator.race.fastestLapId": "Lap",
+  "commentator.race.fastestAvg": "Fastest avg. (Run)",
+  "commentator.race.fastestAvgWindow": "Laps",
+  "commentator.race.rank": "Rank",
+  "commentator.race.gapToFastest": "Gap to 1st",
+  "commentator.race.actualPosition": "Actual position",
+  "commentator.race.newPosition": "New position",
+  "commentator.race.graph.fastestAvgLap": "Fastest average lap time",
+  "commentator.race.graph.fastestLap": "Fastest lap time",
+  "commentator.race.graph.invalidLaps": "Invalid laps",
+  "commentator.race.graph.validLaps": "Valid Laps",
+  "commentator.race.graph.fastestRaceLap": "Fastest Lap",
+  "commentator.race.graph.fastestAvgWindow": "Fastest Average Window",
+  "commentator.race.status": "Status",
+  "commentator.race.status.NO_RACER_SELECTED": "Not Running",
+  "commentator.race.status.READY_TO_START": "Ready to start",
+  "commentator.race.status.RACE_IN_PROGRESS": "Race Running",
+  "commentator.race.status.RACE_PAUSED": "Race Paused",
+  "commentator.race.status.RACE_FINSIHED": "Race Finished",
+  "commentator.race.status.RACE_SUBMITTED": "Race Finished",
+  "commentator.race.status.undefined": "Not Running",
   "user-profile.header.details": "Account details",
   "user-profile.description": "Update your user settings and password.",
   "user-profile.settings.name": "Name",
@@ -592,5 +614,15 @@
   "user-profile.settings.form.label.new_pw_conf.ph": "Confirm your new password",
   "user-profile.settings.form.pw_changed": "Password successfully changed",
   "user-profile.settings.form.error": "Error changing password, please check your old password and try again",
-  "user-profile.settings.form.pw.error": "New passwords do not match."
+  "user-profile.settings.form.pw.error": "New passwords do not match.",
+  "upload-to-car-status.header": "Uploads to car status",
+  "upload-to-car-status.loading": "Loading",
+  "upload-to-car-status.description": "Uploads",
+  "upload-to-car-status.breadcrumb": "Uploads to car status",
+  "upload-to-car-status.pie.header": "Status",
+  "upload-to-car-status.horizontal-bar.header": "Summary",
+  "upload-to-car-status.horizontal-bar.x-title": "Type",
+  "upload-to-car-status.upload-time.header": "Upload Times",
+  "upload-to-car-status.upload-time.x-title": "Time (UTC)",
+  "upload-to-car-status.upload-time.y-title": "Seconds"
 }
