--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -30,7 +30,7 @@
   "button.create": "Create",
   "button.next": "Next",
   "button.ok": "Ok",
-  "common.copied-to-clipboard": "copied to clipboard",
+  "common.copied-to-clipboard": "Copied to clipboard",
   "common.in-progress": "In progress",
   "common.error": "Error",
   "common.success": "Success",
@@ -47,8 +47,8 @@
   "common.panel.split-panel-position-label": "Split panel position",
   "common.panel.split-panel-position-description": "Choose the default split panel position for the service.",
   "common.panel.split-panel-resize-label": "Resize split panel",
-  "filtering.filtering-aria-label": "filtering",
-  "filtering.dismiss-aria-label": "dismiss",
+  "filtering.filtering-aria-label": "Filtering",
+  "filtering.dismiss-aria-label": "Dismiss",
   "filtering.clear-aria-label": "Clear",
   "filtering.placeholder": "Find {{resource}}",
   "filtering.group-values-text": "Values",
@@ -123,21 +123,21 @@
   "carmodelupload.no-cars-online": "No cars are currently online.",
   "carmodelupload.please-wait": "Please wait whilst model upload jobs are submitted",
   "carmodelupload.dismiss-aria-label": "Close alert",
-  "carmodelupload.close-modal-ari-label": "Close Modal",
+  "carmodelupload.close-modal-ari-label": "Close modal",
   "carmodelupload.status": "Status",
   "carmodelupload.status.created": "Created",
   "carmodelupload.status.started": "Started",
-  "carmodelupload.status.inprogress": "In Progress",
+  "carmodelupload.status.inprogress": "In progress",
   "carmodelupload.status.success": "Success",
   "carmodelupload.status.error": "Error",
   "carmodelupload.upload": "Upload models to car",
   "carmodelupload-modal.file-regex": "does not match regex: ^[a-zA-Z0-9-_]+.tar.gz$",
-  "carmodelupload.status.InProgress": "In Progress",
+  "carmodelupload.status.InProgress": "In progress",
   "carmodelupload.status.Success": "Successful",
   "carmodelupload.modern": "Modern",
   "carmodelupload.legacy": "Legacy",
-  "carmodelupload.carName": "Car Name",
-  "carmodelupload.carIpAddress": "Car IP Address",
+  "carmodelupload.carName": "Car name",
+  "carmodelupload.carIpAddress": "Car IP address",
   "carmodelupload.startTime": "Start time",
   "carmodelupload.uploadStartTime": "Upload start time",
   "carmodelupload.endTime": "End time",
@@ -189,7 +189,7 @@
   "events.delete-warning": "Are you sure you want to delete these event(s)?",
   "events.event-id": "Event ID",
   "events.event-name": "Event name",
-  "events.event-name-description": "The name of the Event, will be displayed on leaderboard",
+  "events.event-name-description": "The name of the event, will be displayed on leaderboard",
   "events.event-name-placeholder": "My awesome event",
   "events.event-date": "Event date",
   "events.event-date-description": "The date for when the event will be held",
@@ -214,7 +214,7 @@
   "events.streaming-overlay-link": "Streaming overlay",
   "events.streaming-overlay-link-chroma": "Streaming overlay +chroma",
   "events.landing-page-link": "Landing page",
-  "events.event-type": "Type of Event",
+  "events.event-type": "Type of event",
   "events.event-type-description": "",
   "events.type.private-workshop": "Private workshop",
   "events.type.official-workshop": "Public workshop",
@@ -242,10 +242,10 @@
   "events.race.race-customisations": "Race customisations",
   "events.race.allowed-races-per-racer-label": "Allowed races per racer",
   "events.race.allowed-races-per-racer-description": "The maximum number of races a racer is allowed to do during an event",
-  "events.race.average-time-window-label": "Average Time Window",
+  "events.race.average-time-window-label": "Average time window",
   "events.race.average-time-window-description": "Number of consecutive laps for average laptime",
   "events.sponsor.label": "Sponsor",
-  "events.fleet-info.label": "Car Fleet",
+  "events.fleet-info.label": "Car fleet",
   "events.fleet-info.description": "Select the fleet of cars to use for the event.",
   "events.tracks.reinvent-2018": "re:Invent 2018",
   "events.tracks.reinvent-2019": "re:Invent 2019",
@@ -281,11 +281,11 @@
   "race-admin.no-races": "No races found",
   "race-admin.lap-id": "Lap Id",
   "race-admin.time": "Time",
-  "race-admin.avg-time": "Avg. Time",
+  "race-admin.avg-time": "Avg. time",
   "race-admin.resets": "Resets",
   "race-admin.is-valid": "Valid",
   "race-admin.aut-timer-connected": "Automatic timer",
-  "race-admin.edit-race": "Edit Race",
+  "race-admin.edit-race": "Edit race",
   "race-admin.delete-laps": "Delete lap(s)",
   "race-admin.delete-races": "Delete race(s)",
   "race-admin.delete-warning": "Are you sure you want to delete these lap(s)?",
@@ -321,13 +321,13 @@
   "fleets.edit-cars.update-fleets": "Update fleets",
   "fleets.edit-cars.taillight-label": "Tail Light",
   "fleets.edit-cars.update-tail-lights": "Update tail lights",
-  "fleets.edit-cars.title": "Car Control",
-  "fleets.edit-cars.restart-ros": "Restart DeepRacer Service",
-  "fleets.edit-cars.stop": "Emergency Stop",
+  "fleets.edit-cars.title": "Car control",
+  "fleets.edit-cars.restart-ros": "Restart DeepRacer service",
+  "fleets.edit-cars.stop": "Emergency stop",
   "fleets.fleet-information": "Fleet information",
   "fleets.fleet-id": "Fleet ID",
   "fleets.fleet-name": "Fleet name",
-  "fleets.fleet-name-description": "The name of the Fleet.",
+  "fleets.fleet-name-description": "The name of the fleet.",
   "fleets.fleet-name-placeholder": "My awesome fleet",
   "fleets.fleet-name-empty-message": "Fleet name cannot be empty",
   "fleets.header": "Fleets",
@@ -336,7 +336,7 @@
   "users.breadcrumb": "Add racer",
   "users-admin.breadcrumb": "Users",
   "users-admin.change-role-button": "Change role",
-  "users-admin.change-role-modal-title": "Change Role",
+  "users-admin.change-role-modal-title": "Change role",
   "users-admin.change-role-modal-sub": "Choose a role",
   "users.role.administrator": "admin",
   "users.role.operator": "operator",
@@ -366,7 +366,7 @@
   "users.terms-and-conditions-error": "Check the box to agree to the terms and conditions.",
   "users.terms-and-conditions-title": "Agreement",
   "users.country": "Country",
-  "users.country-code": "Country Code",
+  "users.country-code": "Country cannot",
   "users.flag": "Flag",
   "users-list.header": "Users",
   "users-list.description": "Users are assigned roles that determine which actions they can perform in DREM.",
@@ -390,20 +390,21 @@
   "homeCards.adminHomeCards.all-models": "All models",
   "homeCards.adminHomeCards.car-activation-description": "Add cars to DREM.",
   "homeCards.adminHomeCards.car-activation": "Car activation",
+  "homeCards.adminHomeCards.timer-activation-description": "Add a Raspberry Pi to DREM and install timing software.",
+  "homeCards.adminHomeCards.timer-activation": "Timer activation",
   "homeCards.adminHomeCards.devices-description": "List of all devices registered (online and offline).",
   "homeCards.adminHomeCards.devices": "Devices",
   "homeCards.adminHomeCards.events-description": "Create and administer events.",
   "homeCards.adminHomeCards.events": "Events",
   "homeCards.adminHomeCards.fleets-description": "Create and administer your fleet of devices.",
   "homeCards.adminHomeCards.fleets": "Fleets",
-  "homeCards.adminHomeCards.quarantined-description": "Any models that have been flagged as suspicious during upload.",
-  "homeCards.adminHomeCards.quarantined": "Quarantined models",
   "homeCards.adminHomeCards.time-keeper-description": "Event timekeeper.",
   "homeCards.adminHomeCards.time-keeper": "Timekeeper",
   "homeCards.adminHomeCards.registration": "Registration",
   "homeCards.adminHomeCards.registration-description": "Racers register themselves or are registered by administrators to DREM.",
   "models.all-header": "Models",
   "models.breadcrumb": "Model management",
+  "models.models.breadcrumb": "Models",
   "models.all-breadcrumb": "All models",
   "models.header": "Model management",
   "models.description": "Upload and manage your models.",
@@ -536,7 +537,8 @@
   "topnav.fleets": "Fleets",
   "topnav.create-user": "Add racer",
   "topnav.race-admin": "Manage race",
-  "topnav.models": "Model management",
+  "topnav.models-management": "Model management",
+  "topnav.models": "Models",
   "topnav.models-own": "Model management",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
@@ -586,9 +588,9 @@
   "commentator.race.newPosition": "New Position",
   "commentator.race.graph.fastestAvgLap": "Fastest Average Lap Time",
   "commentator.race.graph.fastestLap": "Fastest Lap Time",
-  "commentator.race.graph.invalidLaps": "Invalid Laps",
-  "commentator.race.graph.validLaps": "Valid Laps",
-  "commentator.race.graph.fastestRaceLap": "Fastest Lap",
+  "commentator.race.graph.invalidLaps": "Not Valid",
+  "commentator.race.graph.validLaps": "Valid",
+  "commentator.race.graph.fastestRaceLap": "Fastest",
   "commentator.race.graph.fastestAvgWindow": "Fastest Average Window",
   "commentator.race.status": "Status",
   "commentator.race.status.NO_RACER_SELECTED": "Not Running",
@@ -621,8 +623,8 @@
   "user-profile.settings.form.pw.error": "New passwords do not match.",
   "upload-to-car-status.header": "Uploads to car status",
   "upload-to-car-status.loading": "Loading",
-  "upload-to-car-status.description": "Uploads",
-  "upload-to-car-status.breadcrumb": "Uploads to car status",
+  "upload-to-car-status.description": "",
+  "upload-to-car-status.breadcrumb": "Upload status",
   "upload-to-car-status.pie.header": "Status",
   "upload-to-car-status.horizontal-bar.header": "Summary",
   "upload-to-car-status.horizontal-bar.x-title": "Type",
