--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -91,7 +91,7 @@
   "AdminActivation.car-activation.ssm-only": "SSM Only",
   "AdminActivation.car-activation.wifi-config": "Optional Wi-Fi configuration for networks with hidden SSIDs",
   "AdminActivation.car-activation.wifi-placeholder": "wifimagic",
-  "AdminActivation.car-activation.wifi": "WiFi Password",
+  "AdminActivation.car-activation.wifi": "WiFi password",
   "AdminActivation.car-activation.version-warning": "DREM is designed for use with AWS DeepRacer cars running firmware version 20.04 and above. Earlier firmware versions are not supported.",
   "timer-activation.header": "Timer activation",
   "timer-activation.description": "Register and install timer code on RPi devices",
@@ -578,28 +578,28 @@
   "commentator.race.averagelapCount": "Average laps per run",
   "commentator.race.restSum": "# of Resets",
   "commentator.race.averageResetsPerLap": "Average resets per lap",
-  "commentator.race.fastest": "Fastest Lap (Run)",
+  "commentator.race.fastest": "Fastest lap (Run)",
   "commentator.race.fastestLapId": "Lap",
-  "commentator.race.fastestAvg": "Fastest Avg. (Run)",
+  "commentator.race.fastestAvg": "Fastest avg. (Run)",
   "commentator.race.fastestAvgWindow": "Laps",
   "commentator.race.rank": "Rank",
   "commentator.race.gapToFastest": "Gap to 1st",
-  "commentator.race.actualPosition": "Actual Position",
-  "commentator.race.newPosition": "New Position",
-  "commentator.race.graph.fastestAvgLap": "Fastest Average Lap Time",
-  "commentator.race.graph.fastestLap": "Fastest Lap Time",
-  "commentator.race.graph.invalidLaps": "Not Valid",
+  "commentator.race.actualPosition": "Actual position",
+  "commentator.race.newPosition": "New position",
+  "commentator.race.graph.fastestAvgLap": "Fastest average lap time",
+  "commentator.race.graph.fastestLap": "Fastest lap time",
+  "commentator.race.graph.invalidLaps": "Not valid",
   "commentator.race.graph.validLaps": "Valid",
   "commentator.race.graph.fastestRaceLap": "Fastest",
-  "commentator.race.graph.fastestAvgWindow": "Fastest Average Window",
+  "commentator.race.graph.fastestAvgWindow": "Fastest average window",
   "commentator.race.status": "Status",
-  "commentator.race.status.NO_RACER_SELECTED": "Not Running",
+  "commentator.race.status.NO_RACER_SELECTED": "Not running",
   "commentator.race.status.READY_TO_START": "Ready to start",
-  "commentator.race.status.RACE_IN_PROGRESS": "Race Running",
-  "commentator.race.status.RACE_PAUSED": "Race Paused",
-  "commentator.race.status.RACE_FINSIHED": "Race Finished",
-  "commentator.race.status.RACE_SUBMITTED": "Race Finished",
-  "commentator.race.status.undefined": "Not Running",
+  "commentator.race.status.RACE_IN_PROGRESS": "Race running",
+  "commentator.race.status.RACE_PAUSED": "Race paused",
+  "commentator.race.status.RACE_FINSIHED": "Race finished",
+  "commentator.race.status.RACE_SUBMITTED": "Race finished",
+  "commentator.race.status.undefined": "Not running",
   "user-profile.header.details": "Account details",
   "user-profile.description": "Update your user settings and password.",
   "user-profile.settings.name": "Name",
@@ -628,7 +628,7 @@
   "upload-to-car-status.pie.header": "Status",
   "upload-to-car-status.horizontal-bar.header": "Summary",
   "upload-to-car-status.horizontal-bar.x-title": "Type",
-  "upload-to-car-status.upload-time.header": "Upload Times",
+  "upload-to-car-status.upload-time.header": "Upload times",
   "upload-to-car-status.upload-time.x-title": "Time (UTC)",
   "upload-to-car-status.upload-time.y-title": "Seconds"
 }
