Updated Python dependencies

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -499,10 +499,10 @@
   "timekeeper.lap-table.loading-resources": "Loading resources",
   "timekeeper.lap-table.resets": "Resets",
   "timekeeper.lap-table.average": "Average",
-  "timekeeper.avg-lap-table.header": "Fastest Average Lap",
+  "timekeeper.avg-lap-table.header": "Fastest average lap",
   "timekeeper.avg-lap-table.loading-resources": "Loading resources",
-  "timekeeper.avg-lap-table.from-lap": "From Lap",
-  "timekeeper.avg-lap-table.to-lap": "To Lap",
+  "timekeeper.avg-lap-table.from-lap": "From lap",
+  "timekeeper.avg-lap-table.to-lap": "To lap",
   "timekeeper.avg-lap-table.average": "Average",
   "timekeeper.pause-race": "Pause race",
   "timekeeper.racer-selector.loading-events": "Loading events",
